# prisoners-arena

./: .dockerignore  .gitignore  .gitmodules  Anchor.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  arena-local.toml  arena.toml  arena.toml.bak  justfile  package-lock.json  package.json  run-tournament.sh  tsconfig.json
.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1770498642626253  LOG.old.1770502914888405  MANIFEST-000021
.circleci/: config.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs  state.rs  tx.rs
cli/src/commands/: admin.rs  info.rs  mod.rs  player.rs  util.rs
crates/match-logic/: Cargo.toml
crates/match-logic/src/: game.rs  lib.rs  pairing.rs  strategy.rs  wasm.rs
docs/: architecture.md  configuration-strategy.md  contract-audit.md  custom-strategy-vm.md  fix-test-failures.md  fund-flow.md  further-developments.md  operational-costs.md  strategy-lab-editor.md
operator/: Cargo.toml  Dockerfile  README.md
operator/src/: actions.rs  db.rs  main.rs  state.rs
programs/dilemma-arena/: Cargo.toml
programs/dilemma-arena/src/: error.rs  lib.rs  state.rs
programs/dilemma-arena/src/instructions/: admin.rs  player.rs  tournament.rs
releases/: v1.0.md  v1.1.md  v1.2.md  v1.3.md  v1.4.md  v1.5.md  v1.6.md  v1.7.md
requirements/: admin-cli.md  concept.md  contract.md  frontend.md  match-logic.md  operator.md
scripts/: init-devnet.ts  initialize.mjs  initialize.ts
simulator/: Cargo.toml  Dockerfile  Dockerfile.dockerignore
simulator/src/: config.rs  main.rs  player.rs  state.rs  wallet.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1770841056943542  MANIFEST-000021
tests/: dilemma-arena.ts  prisoners-arena.ts
wallets/: player1.json  player2.json  player3.json  player4.json
web/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dockerignore  entrypoint.sh  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  idl.json  index.css  main.tsx  middleware.ts  proxy.ts  types.ts
web/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
web/src/app/about/: page.tsx
web/src/app/api/: page.tsx
web/src/app/api/config/: route.ts
web/src/app/api/entry/[pubkey]/: route.ts
web/src/app/api/idl/: route.ts
web/src/app/api/participate/: route.ts
web/src/app/api/tournament/: route.ts
web/src/app/api/tournament/[id]/: route.ts
web/src/app/api/tournaments/: route.ts
web/src/app/configure/: page.tsx
web/src/app/docs/: page.tsx
web/src/app/docs/custom-strategy-vm/: page.tsx
web/src/app/explorer/: page.tsx
web/src/app/guide/: page.tsx
web/src/app/history/: page.tsx
web/src/app/how-it-works/: page.tsx
web/src/app/matchmaking/: page.tsx
web/src/app/participate/: page.tsx
web/src/app/participate.md/: route.ts
web/src/app/tournament/[id]/: page.tsx
web/src/components/: AnimatedCounter.tsx  BytecodeEditor.tsx  ConfigOutput.tsx  ConfigPanel.tsx  CopyButton.tsx  CountdownTimer.tsx  ErrorBoundary.tsx  ExplorerLink.tsx  Footer.tsx  Header.tsx  InitialMovesGrid.tsx  Layout.tsx  LightRays.tsx  Logo.tsx  MatchHistory.tsx  MatchProgressRing.tsx  Nav.tsx  NetworkBadge.tsx  NetworkSelector.tsx  ParamPanel.tsx  PlayerDetailModal.tsx  ProgressRing.tsx  ScoreboardTable.tsx  ScoresTable.tsx  SegmentedCountdown.tsx  ShineBorder.tsx  SkeletonLoader.tsx  SolAmount.tsx  StrategyBadge.tsx  StrategyDistributionChart.tsx  StrategyInfo.tsx  StrategyPicker.tsx  StrategyPreview.tsx  StrategySelector.tsx  TracingBeam.tsx  WalletButton.tsx  WalletProvider.tsx
web/src/contexts/: NetworkContext.tsx  ToastContext.tsx
web/src/hooks/: useProgram.ts  useTournament.ts  useTransactions.ts
web/src/lib/: api.ts  bytecodeAssembler.ts  config.ts  db.ts  matchReplay.ts  matchmaking.ts  network-config.ts  network-context.ts  rate-limit.ts  simulate.ts  solana.ts  strategyConfig.ts  tournament-utils.ts
web/src/lib/__tests__/: bytecodeAssembler.test.ts  cache-healing.test.ts
web/src/pages/: Dashboard.tsx  Enter.tsx  EntryView.tsx  Guide.tsx  History.tsx  Home.tsx  HowToPlay.tsx  Leaderboard.tsx  Match.tsx
web/src/types/: global.d.ts  index.ts
