[workspace]
members = [
    "contract/crates/match-logic",
    "contract/programs/prisoners-arena",
    "operator",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MaikBuse/prisoners-arena"

[workspace.dependencies]
anchor-lang = "0.32"
solana-sdk = "2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
overflow-checks = true
