[package]
name = "prisoners-cli"
version = "0.1.0"
edition = "2021"
description = "Admin CLI for Prisoner's Arena"

[[bin]]
name = "arena"
path = "src/main.rs"

[dependencies]
solana-sdk = "3.0"
solana-client = "3.1"
solana-commitment-config = "3.1"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
shellexpand = "3.1"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.4"
dirs = "6.0"
serde_json = "1.0"
solana-system-interface = { version = "3.0", features = ["bincode"] }
