[package]
name = "prisoners-operator"
version = "0.1.0"
edition = "2021"
description = "Tournament automation bot for Prisoner's Arena"

[[bin]]
name = "operator"
path = "src/main.rs"

[dependencies]
match-logic = { path = "../contract/crates/match-logic" }
solana-sdk = "2.0"
solana-client = "2.0"
solana-system-interface = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
shellexpand = "3.1"
toml = "0.8"
rusqlite = { version = "0.34", features = ["bundled"] }
