[package]
name = "prisoners-operator"
version = "0.1.0"
edition = "2021"
description = "Tournament automation bot for Prisoner's Arena"

[[bin]]
name = "operator"
path = "src/main.rs"

[dependencies]
match-logic = { path = "../contract/crates/match-logic" }
solana-sdk = "3.0"
solana-client = "3.1"
solana-commitment-config = "3.1"
solana-system-interface = "3.0"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
shellexpand = "3.1"
toml = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rusqlite = { version = "0.38", features = ["bundled"] }
