[package]
name = "prisoners-simulator"
version.workspace = true
edition.workspace = true
description = "Tournament simulator for Prisoner's Arena — populates devnet with simulated players"

[[bin]]
name = "simulator"
path = "src/main.rs"

[dependencies]
solana-sdk = { workspace = true }
solana-client = "3.1"
solana-commitment-config = "3.1"
solana-system-interface = "3.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
shellexpand = "3.1"
toml = "1.0"
sha2 = "0.10"
rand = "0.8"
